feat: extend top miner stats and create dedicated endpoint for that (#26)
